// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pageHeader > renders with as correctly 1`] = `
"<section data-slot="root" class="relative border-b border-border py-8">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="flex flex-col gap-4 lg:flex-row lg:items-center lg:justify-between">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`pageHeader > renders with class correctly 1`] = `
"<div data-slot="root" class="relative border-b border-border py-8 py-12">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="flex flex-col gap-4 lg:flex-row lg:items-center lg:justify-between">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageHeader > renders with default slot correctly 1`] = `
"<div data-slot="root" class="relative border-b border-border py-8">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="flex flex-col gap-4 lg:flex-row lg:items-center lg:justify-between">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->Default slot
  </div>
</div>"
`;

exports[`pageHeader > renders with description correctly 1`] = `
"<div data-slot="root" class="relative border-b border-border py-8">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="flex flex-col gap-4 lg:flex-row lg:items-center lg:justify-between">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div data-slot="description" class="text-lg text-pretty color-text-muted">Description</div>
  </div>
</div>"
`;

exports[`pageHeader > renders with description slot correctly 1`] = `
"<div data-slot="root" class="relative border-b border-border py-8">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="flex flex-col gap-4 lg:flex-row lg:items-center lg:justify-between">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div data-slot="description" class="text-lg text-pretty color-text-muted">Description slot</div>
  </div>
</div>"
`;

exports[`pageHeader > renders with headline correctly 1`] = `
"<div data-slot="root" class="relative border-b border-border py-8">
  <div data-slot="headline" class="mb-2.5 text-sm font-600 color-primary flex items-center gap-1.5">Headline</div>
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="flex flex-col gap-4 lg:flex-row lg:items-center lg:justify-between">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageHeader > renders with headline slot correctly 1`] = `
"<div data-slot="root" class="relative border-b border-border py-8">
  <div data-slot="headline" class="mb-2.5 text-sm font-600 color-primary flex items-center gap-1.5">Headline slot</div>
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="flex flex-col gap-4 lg:flex-row lg:items-center lg:justify-between">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageHeader > renders with links correctly 1`] = `
"<div data-slot="root" class="relative border-b border-border py-8">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="flex flex-col gap-4 lg:flex-row lg:items-center lg:justify-between">
      <!--v-if-->
      <div data-slot="links" class="flex flex-wrap items-center gap-1.5"><button type="button" data-slot="base" class="font-500 rounded-md inline-flex items-center aria-disabled:opacity-75 aria-disabled:cursor-not-allowed disabled:opacity-75 disabled:cursor-not-allowed transition-colors text-sm gap-1.5 ring ring-inset ring-ring-accented color-text bg-background hover:bg-background-elevated active:bg-background-elevated disabled:bg-background aria-disabled:bg-background outline-outline-inverted/25 focus-visible:outline-3 focus-visible:ring-ring-inverted px-2.5 py-1.5"><span class="iconify i-simple-icons:github shrink-0 size-5" aria-hidden="true" data-slot="leadingIcon"></span><span data-slot="label" class="truncate">GitHub</span>
          <!--v-if-->
        </button></div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageHeader > renders with links slot correctly 1`] = `
"<div data-slot="root" class="relative border-b border-border py-8">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="flex flex-col gap-4 lg:flex-row lg:items-center lg:justify-between">
      <!--v-if-->
      <div data-slot="links" class="flex flex-wrap items-center gap-1.5">Links slot</div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageHeader > renders with title correctly 1`] = `
"<div data-slot="root" class="relative border-b border-border py-8">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="flex flex-col gap-4 lg:flex-row lg:items-center lg:justify-between">
      <h1 data-slot="title" class="text-3xl sm:text-4xl text-pretty font-700 color-text-highlighted">Title</h1>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageHeader > renders with title slot correctly 1`] = `
"<div data-slot="root" class="relative border-b border-border py-8">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="flex flex-col gap-4 lg:flex-row lg:items-center lg:justify-between">
      <h1 data-slot="title" class="text-3xl sm:text-4xl text-pretty font-700 color-text-highlighted">Title slot</h1>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageHeader > renders with ui correctly 1`] = `
"<div data-slot="root" class="relative border-b border-border py-8">
  <!--v-if-->
  <div data-slot="container" class="py-12">
    <div data-slot="wrapper" class="flex flex-col gap-4 lg:flex-row lg:items-center lg:justify-between">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;
